Wiring up UI activities

--- a/MySolitaire/app/src/main/res/menu/menu_game_menu.xml
+++ b/MySolitaire/app/src/main/res/menu/menu_game_menu.xml
@@ -7,4 +7,9 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/play_klondike"
+        android:orderInCategory="99"
+        android:title="@string/play_klondike"
+        app:showAsAction="ifRoom" />
 </menu>
