--- a/MySolitaire/app/src/main/res/layout/fragment_card.xml
+++ b/MySolitaire/app/src/main/res/layout/fragment_card.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".CardFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/card_name"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/card_name" />
+        android:layout_height="match_parent" />
 
-</FrameLayout>
+    <ImageView
+        android:id="@+id/imageView_club"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/card_fragment_contentDescription"
+        android:src="@drawable/card-suit-club" />
+
+</LinearLayout>
