--- a/MySolitaire/app/src/main/res/layout/fragment_card.xml
+++ b/MySolitaire/app/src/main/res/layout/fragment_card.xml
@@ -18,6 +18,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/card_fragment_contentDescription"
-        android:src="@drawable/card-suit-club" />
+        android:src="@drawable/card_suit_club" />
 
 </LinearLayout>
